{
    "name": "PlayerInputSystem",
    "maps": [
        {
            "name": "Platforming",
            "id": "6434ac6b-4472-4844-a8a8-4ff74e6890e2",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "422ceca0-4efb-4f57-a915-375d4221c0e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "676cfde1-ac98-4ab5-84ab-1b52df261170",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "76cd1703-2d80-4dab-a871-be3c1d3c173e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "X Axis",
                    "id": "467ab9f4-0833-4e1d-8ce8-6548bb2ff43c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4cf8c0dc-b26f-4cf0-9277-8af73a0d9fad",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "48b4cbd5-0c4d-4677-8c50-aa4bed82469b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}